unpackaged/main/default/objects/DFD_Config__mdt/DFD_Config__mdt.object-meta.xml
<CustomObject>
    <label>DFD_Config</label>
    <pluralLabel>DFD_Configs</pluralLabel>
</CustomObject>