unpackaged/main/default/objects/DFD_Config__mdt/fields/Card_Background_Color_Hex__c.field-meta.xml
<CustomField>
    <fullName>Card_Background_Color_Hex__c</fullName>
    <label>Card Background Color Hex</label>
    <length>6</length>
    <type>Text</type>
</CustomField>