unpackaged/main/default/objects/DFD_Config__mdt/fields/Card_Fade_Out_Color__c.field-meta.xml
<CustomField>
    <fullName>Card_Fade_Out_Color__c</fullName>
    <label>Card Fade Out Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>