unpackaged/main/default/objects/DFD_Config__mdt/fields/Description_Font_Color__c.field-meta.xml
<CustomField>
    <fullName>Description_Font_Color__c</fullName>
    <label>Description Font Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>