unpackaged/main/default/objects/DFD_Config__mdt/fields/Header_Font_Color__c.field-meta.xml
<CustomField>
    <fullName>Header_Font_Color__c</fullName>
    <label>Header Font Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>