unpackaged/main/default/objects/DFD_Config__mdt/fields/Header_Font_Size__c.field-meta.xml
<CustomField>
    <fullName>Header_Font_Size__c</fullName>
    <label>Header Font Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>