unpackaged/main/default/objects/DFD_Config__mdt/fields/In_Option_Link_font_size__c.field-meta.xml
<CustomField>
    <fullName>In_Option_Link_font_size__c</fullName>
    <label>In-Option Link font size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>