unpackaged/main/default/objects/DFD_Config__mdt/fields/In_Options_Font_Hex_Code__c.field-meta.xml
<CustomField>
    <fullName>In_Options_Font_Hex_Code__c</fullName>
    <label>In Options Font Hex Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>