unpackaged/main/default/objects/DFD_Config__mdt/fields/Links_per_Option__c.field-meta.xml
<CustomField>
    <fullName>Links_per_Option__c</fullName>
    <label>Links per Option</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>