unpackaged/main/default/objects/DFD_Config__mdt/fields/Option_font_size__c.field-meta.xml
<CustomField>
    <fullName>Option_font_size__c</fullName>
    <label>Option font size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>