unpackaged/main/default/objects/DFD_Config__mdt/fields/Options_Font_Hex_Code__c.field-meta.xml
<CustomField>
    <fullName>Options_Font_Hex_Code__c</fullName>
    <label>Options Font Hex Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>