unpackaged/main/default/objects/DFD_Config__mdt/fields/Options_per_row__c.field-meta.xml
<CustomField>
    <fullName>Options_per_row__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Options per row</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>