unpackaged/main/default/objects/DFD_Config__mdt/fields/Options_Per_Row_Tab__c.field-meta.xml
<CustomField>
    <fullName>Options_Per_Row_Tab__c</fullName>
    <label>Options Per Row Tab</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>