unpackaged/main/default/objects/DFD_Config__mdt/fields/Redirect_Button_Name__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Button_Name__c</fullName>
    <label>Redirect Button Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>