unpackaged/main/default/objects/DFD_Config__mdt/fields/Right_Content_Font_Color__c.field-meta.xml
<CustomField>
    <fullName>Right_Content_Font_Color__c</fullName>
    <label>Right Content Font Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>