unpackaged/main/default/objects/DFD_Config__mdt/fields/Right_Content_Font_Size__c.field-meta.xml
<CustomField>
    <fullName>Right_Content_Font_Size__c</fullName>
    <label>Right Content Font Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>