unpackaged/main/default/objects/DFD_Config__mdt/fields/Root_Option_RecordId__c.field-meta.xml
<CustomField>
    <fullName>Root_Option_RecordId__c</fullName>
    <label>Root Option RecordId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>