unpackaged/main/default/objects/DFD_Config__mdt/fields/Sub_Header_Font_Color__c.field-meta.xml
<CustomField>
    <fullName>Sub_Header_Font_Color__c</fullName>
    <label>Sub Header Font Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>