unpackaged/main/default/objects/DFD_Config__mdt/fields/Sub_Header_Font_Size__c.field-meta.xml
<CustomField>
    <fullName>Sub_Header_Font_Size__c</fullName>
    <label>Sub Header Font Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>